--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -54,6 +54,16 @@
         </activity>
 
         <activity
+            android:name=".ClientesNutricionista"
+            android:label="@string/app_name" >
+        </activity>
+
+        <activity
+            android:name=".ListItemDetail"
+            android:label="@string/app_name" >
+        </activity>
+
+        <activity
             android:name=".MainActivity"
             android:label="@string/app_name" >
             <intent-filter>
