--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -64,6 +64,11 @@
         </activity>
 
         <activity
+            android:name=".NovoAlimento"
+            android:label="@string/app_name" >
+        </activity>
+
+        <activity
             android:name=".MainActivity"
             android:label="@string/app_name" >
             <intent-filter>
