--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -54,6 +54,11 @@
         </activity>
 
         <activity
+            android:name=".ResultadoAvaliacao"
+            android:label="@string/app_name" >
+        </activity>
+
+        <activity
             android:name=".ClientesNutricionista"
             android:label="@string/app_name" >
         </activity>
