--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,7 +23,7 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:name=".ParseApplication"
+        android:name=".Inicio.ParseApplication"
         android:theme="@style/AppTheme" >
 
         <meta-data
@@ -34,48 +34,48 @@
             android:value="@string/parse_client_key" />
 
         <activity
-            android:name=".DadosUsuario"
+            android:name=".CadastroUsuario.DadosUsuario"
             android:label="@string/app_name"
             android:windowSoftInputMode="stateHidden">
         </activity>
 
         <activity
-            android:name=".Inicial"
+            android:name=".Inicio.Inicial"
             android:label="@string/app_name" >
         </activity>
 
         <activity
-            android:name=".Login"
+            android:name=".Inicio.Login"
             android:label="@string/app_name" >
         </activity>
 
         <activity
-            android:name=".FormularioAvaliacao"
+            android:name=".Avaliacao.FormularioAvaliacao"
             android:label="@string/app_name" >
         </activity>
 
         <activity
-            android:name=".ResultadoAvaliacao"
+            android:name=".Avaliacao.ResultadoAvaliacao"
             android:label="@string/app_name" >
         </activity>
 
         <activity
-            android:name=".ClientesNutricionista"
+            android:name=".Nutricionista.ClientesNutricionista"
             android:label="@string/app_name" >
         </activity>
 
         <activity
-            android:name=".ListItemDetail"
+            android:name=".Nutricionista.ListItemDetail"
             android:label="@string/app_name" >
         </activity>
 
         <activity
-            android:name=".NovoAlimento"
+            android:name=".Nutricionista.NovoAlimento"
             android:label="@string/app_name" >
         </activity>
 
         <activity
-            android:name=".MainActivity"
+            android:name=".Inicio.MainActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -117,7 +117,6 @@
         </intent-filter>
     </receiver>
 
-    <!--<receiver android:name="com.example.eduardo.tcc.Reciever" -->
     <!--<receiver android:name="com.parse.ParsePushBroadcastReceiver"-->
         <!--android:exported="false">-->
         <!--<intent-filter>-->
