--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,7 +40,7 @@
         </activity>
 
         <activity
-            android:name=".RecomendacoesAvaliacao.AlimentosPraticas"
+            android:name=".RecomendacoesAvaliacao.PraticasNutricionais"
             android:label="@string/app_name"
             android:windowSoftInputMode="stateHidden">
         </activity>
