--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -86,6 +86,11 @@
         </activity>
 
         <activity
+            android:name=".Push.PraticaRandom"
+            android:label="@string/app_name" >
+        </activity>
+
+        <activity
             android:name=".Inicio.MainActivity"
             android:label="@string/app_name" >
             <intent-filter>
