--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -91,6 +91,11 @@
         </activity>
 
         <activity
+            android:name=".Notification.Notificacao"
+            android:label="@string/app_name" >
+        </activity>
+
+        <activity
             android:name=".Inicio.MainActivity"
             android:label="@string/app_name" >
             <intent-filter>
@@ -100,6 +105,10 @@
             </intent-filter>
         </activity>
 
+        <activity android:name=".Notification.SecondActivity" />
+
+        <service android:name=".Notification.ScheduleService" />
+        <service android:name=".Notification.NotifyService" />
 
     <service android:name="com.parse.PushService" />
     <receiver android:name="com.parse.ParseBroadcastReceiver">
