Colocando notificações e email no lugar certo e ajustando algumas coisas quando o nutricionista adiciona alimentos pro cliente

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -107,6 +107,11 @@
 
         <activity android:name=".Notification.SecondActivity" />
 
+        <activity
+            android:name=".Email.SendMailActivity"
+            android:label="@string/app_name" >
+        </activity>
+
         <service android:name=".Notification.ScheduleService" />
         <service android:name=".Notification.NotifyService" />
 
